# biz-reply-composer-demo

./: .env.example  .gitignore  CLAUDE.md  README.md  USER_TEST.md  biz-reply-composer-demo_instruction.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: ci.yml  release.yml
SPEC/: README.md
src/: App.tsx  main.tsx  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/core/: Cargo.toml
src-tauri/core/src/: config.rs  dto.rs  error.rs  lib.rs  logging.rs  time.rs
src-tauri/core/src/core/: context.rs  generator.rs  mod.rs  ollama.rs  pii.rs  prompt.rs  session.rs  structure.rs  validator.rs
src-tauri/core/src/db/: master_repository.rs  mod.rs  repository.rs
src-tauri/icons/: icon.icns
src-tauri/migrations/: 0001_init_schema.sql  0002_seed_masters.sql
src-tauri/src/: commands.rs  lib.rs  main.rs  state.rs
src/components/: CopyButton.tsx  LanguageSwitcher.tsx  Layout.tsx  Notice.tsx
src/config/: app.ts
src/hooks/: useMasters.ts
src/i18n/: index.ts  locales.test.ts
src/i18n/locales/: ar.json  en.json  es.json  fr.json  ja.json  ru.json  zh.json
src/lib/: icons.ts  mockBackend.ts  tauri.ts
src/pages/: HealthPage.tsx  HistoryPage.tsx  MainPage.test.tsx  MainPage.tsx  SettingsPage.tsx
src/test/: setup.ts
