[package]
name = "biz-reply-composer-demo"
version = "0.1.3"
description = "文脈に合わせてビジネスメール返信文を生成するデスクトップAIデモ"
authors = ["biz-reply-composer-demo"]
edition = "2021"
rust-version = "1.77"

# Tauri非依存のコアを別クレートに分離（Codespacesで軽量テスト、Tauryビルドはローカル/CI）。
[workspace]
members = ["core"]
resolver = "2"

# main.rs から呼ぶライブラリ名（Tauri 2 慣習）
[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
app_core = { path = "core" }
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
# state.rs / commands.rs が rusqlite::Connection を直接扱うため（coreと同版）
rusqlite = { version = "0.32", features = ["bundled"] }

[features]
default = []
