[package]
name = "app_core"
version = "0.1.0"
edition = "2021"
rust-version = "1.77"
description = "biz-reply-composer-demo の Tauri非依存コアロジック（Codespacesで cargo test 可能）"

[lib]
name = "app_core"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
ureq = { version = "2.10", default-features = false, features = ["json"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["clock"] }
